--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,13 @@
-better-exceptions==0.2.2
-dlib==19.17.0
-future==0.17.1
-imgaug==0.2.9
-numpy==1.16.4
-opencv-python==4.1.0.25
 pandas==0.24.2
+albumentations==0.4.6
 pretrainedmodels==0.7.4
-tensorboard==1.14.0
-torch==1.1.0
-torchvision==0.3.0
-tqdm==4.32.2
-yacs==0.1.6
+imgaug==0.4.0
+torch==1.4.0
+torchvision==0.5.0
+yacs==0.1.7
+matplotlib==3.1.0
+facenet_pytorch==2.3.0
+better_exceptions==0.2.2
+tqdm==4.42.1
+numpy==1.16.4
+Pillow==7.2.0
