--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,11 @@
-pandas==0.24.2
-albumentations==0.4.6
-pretrainedmodels==0.7.4
-imgaug==0.4.0
-torch==1.4.0
 torchvision==0.5.0
+pretrainedmodels==0.7.4
+numpy==1.16.4
 yacs==0.1.7
 matplotlib==3.1.0
-facenet_pytorch==2.3.0
-better_exceptions==0.2.2
 tqdm==4.42.1
-numpy==1.16.4
+torch>=1.4.0
+albumentations==0.4.6
+pandas==0.24.2
+facenet_pytorch==2.3.0
 Pillow==7.2.0
